# spaceforge

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/assets/shaders/: instancing.wgsl
app/config/: asset_import.toml  categories.toml  regions_types.toml  surfaces.toml  viewer.toml
app/src/: main.rs
asset_import/: Cargo.toml
asset_import/src/: lib.rs  placement_region.rs  region_import.rs  space.rs  space_import.rs  usda_common.rs
asset_import/tests/: placement_region.rs  space.rs
assets/config/: asset_import.toml
assets/src/: lib.rs
assets_import/: Cargo.toml
assets_import/src/: lib.rs  placement_region.rs  space.rs  usda_common.rs
assets_import/tests/: placement_region.rs  space.rs
category_types/: Cargo.toml
category_types/src/: lib.rs
furniture_types/: Cargo.toml
furniture_types/src/: lib.rs
geometry_core/: Cargo.toml
geometry_core/src/: lib.rs
geometry_core/src/geometry_ops/: boundary.rs  flatten.rs  hull.rs  mod.rs  plane.rs  (+1 more)
solver/: Cargo.toml
solver/src/: config.rs  export.rs  logging.rs  main.rs
types/: Cargo.toml
types/src/: lib.rs
usd_core/: Cargo.toml
usd_core/src/: common.rs  lib.rs  placement_region.rs  space.rs  types.rs
usd_core/tests/: placement_region.rs  space.rs
utils/: Cargo.toml
utils/src/: lib.rs
vdb_core/: Cargo.toml  build.rs
vdb_core/cpp/: vdb_wrapper.cpp
vdb_core/src/: ffi.rs  lib.rs
vdb_core/tests/: common.rs  from_obj_path.rs  to_mesh.rs
viewer/: Cargo.toml
viewer/src/: camera.rs  config.rs  lib.rs  main.rs  obj.rs  scene.rs  ui.rs  vdb_mesh.rs  voxel_instancing.rs
(+13 files in other folders)
