[package]
name = "app"
version = "0.1.0"
edition = "2021"

# 当启用 feature viewer 时，也自动启用 依赖 viewer
[features]
viewer = ["dep:viewer"]

[dependencies]
geometry_core = { path = "../geometry_core" }
viewer = { path = "../viewer", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
