[package]
name = "assets_import"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry_core = { path = "../geometry_core" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
types = { path = "../types" }
usd_core = { path = "../usd_core" }
vdb_core = { path = "../vdb_core" }
utils = { path = "../utils" }

[dev-dependencies]
serde_json = "1"
