[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
assets_import = { path = "../assets_import" }
geometry_core = { path = "../geometry_core" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8"
utils = { path = "../utils" }
